@@ -1,3 +1,14 @@
+2000-01-31  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* rs6000-protos.h: New file.
+
+	* rs6000.c: Include tm_p.h.  Fix compile time warnings.
+	
+	* rs6000.h: Move prototypes to rs6000-protos.h.  Fix compile time
+	warnings.
+	
+	* sysv4.h: Likewise.
+
 2000-01-28  Geoff Keating  <geoffk@cygnus.com>
 
 	* ../../configure.in: Delete powerpcle-*-winnt*
